[package]
authors = ["Stig Johan Berggren <stigjb@gmail.com>"]
description = "Pitch classes for scoring music"
edition = "2018"
keywords = ["music", "music-theory", "pitch", "scoring"]
license = "MIT OR Apache-2.0"
name = "tonality"
readme = "README.md"
repository = "https://github.com/stigjb/tonality"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
num-derive = "0.3"
