[package]
authors = ["Stig Johan Berggren <stigjb@gmail.com>"]
categories = ["multimedia"]
description = "Tonal pitch classes with enharmonic distinction"
documentation = "https://docs.rs/tonality"
edition = "2018"
homepage = "https://github.com/stigjb/tonality"
keywords = ["music", "music-theory", "pitch", "scoring"]
license = "MIT OR Apache-2.0"
name = "tonality"
readme = "README.md"
repository = "https://github.com/stigjb/tonality"
version = "0.0.3"
exclude = ["/.github/", "proptest-regressions/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
num-traits = "0.2"
num-derive = "0.3"

[dev-dependencies]
proptest = "0.9.6"
